--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 
   <!-- Google Fonts -->
   <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 
   <!-- Font Awesome icons -->
@@ -123,7 +123,7 @@
     <h1 class="about-me-text">About Me</h1>
     <div class="row">
       <div class="col-lg-5 col-md-5 col-sm-10">
-        <img src="./assets/images/coder.gif" alt="profile-image" style="max-width: 100%;border-radius: 10%;">
+        <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
       </div>
       <div class="col-lg-7 col-md-7 col-sm-10">
         <h2>I am Rupdeep Saha</h2>
@@ -138,13 +138,49 @@
 
   <!-- Start Experience and Skills Area -->
 
-  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
         <h2 class="text-uppercase">Skills</h2>
         <ul class="skill-list">
           <li class="skill-list-item">
-            <span>React</span>
+            <span>React &nbsp;<img src="./assets/icons/react.svg" alt="React" width="25px" height="25px"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>HTML5 &nbsp;<img src="./assets/icons/html5.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>CSS3 &nbsp;<img src="./assets/icons/css3.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>JavaScript &nbsp;<img src="./assets/icons/javascript.svg" alt="React" width="25px" height="25px"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>Python &nbsp;<img src="./assets/icons/python.svg" alt="React" width="25px" height="25px"></span>
             <span style="float: right;">25%</span>
             <div class="progress" style="margin-top: 1rem;">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
@@ -246,6 +282,7 @@
 
   <!-- Main JS -->
   <script src="./js/main.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 
 </html>
