--- a/index1.html
+++ b/index1.html
@@ -25,10 +25,13 @@
 <body>
   <!-- Start Banner Image -->
   <!-- https://colorhunt.co/palette/62193 -->
+  <!-- 1e1e1e section1
+   252525 section2
+  222831 footer and nav-->
   <div class="bg-color-1">
     <!-- Start Header -->
     <header>
-      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="100">
+      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40">
         <div class="container">
           <div class="navbar-translate">
             <a class="navbar-brand" href="#">Rupdeep Saha</a>
@@ -117,7 +120,7 @@
   <!-- End Banner Image-->
 
   <!-- Start About Me Area -->
-  <div style="background-color: #323232;padding-bottom: 3rem;padding-top: 3rem;">
+  <div style="background-color: #1e1e1e;padding-bottom: 3rem;padding-top: 3rem;">
   <div class="container">
     <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
     <div class="row">
@@ -137,7 +140,7 @@
   <!-- End About Me Area -->
 
   <!-- Start Experience and Skills Area -->
-
+  <div style="background-color: #252525;padding-bottom: 3rem;padding-top: 3rem;">
   <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
@@ -203,6 +206,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <!-- End Experience and Skills Area -->
 
