--- a/index1.html
+++ b/index1.html
@@ -28,10 +28,11 @@
   <!-- 1e1e1e section1
    252525 section2
   222831 footer and nav-->
+  <!-- #90caf9 #121212 #333 -->
   <div class="bg-color-1">
     <!-- Start Header -->
     <header>
-      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40">
+      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40" style="background-color: #333!important">
         <div class="container">
           <div class="navbar-translate">
             <a class="navbar-brand" href="#">Rupdeep Saha</a>
@@ -79,7 +80,7 @@
           <ul>
             <li class="list">
               <a href="mailto:rupdeep654@gmail.com" target="_blank">
-                <div class="fa fa-envelope icon-white"></div>
+                <i class="fa fa-envelope icon-white"></i>
               </a>
             </li>
             <li class="list">
@@ -89,38 +90,41 @@
             </li>
             <li class="list">
               <a href="https://github.com/therupdeep" target="_blank">
-                <div class="fab fa-github icon-white"></div>
+                <i class="fab fa-github icon-white"></i>
               </a>
             </li>
             <li class="list">
               <a href="https://medium.com/@kitze" target="_blank">
-                <div class="fab fa-medium icon-white"></div>
+                <i class="fab fa-medium icon-white"></i>
               </a>
             </li>
             <li class="list">
               <a href="https://medium.com/@kitze" target="_blank">
-                <div class="fab fa-facebook icon-white"></div>
+                <i class="fab fa-facebook icon-white"></i>
               </a>
             </li>
             <li class="list">
               <a href="https://medium.com/@kitze" target="_blank">
-                <div class="fab fa-linkedin icon-white"></div>
+                <i class="fab fa-linkedin icon-white"></i>
               </a>
             </li>
             <li class="list">
               <a href="https://medium.com/@kitze" target="_blank">
-                <div class="fab fa-telegram icon-white"></div>
+                <i class="fab fa-telegram icon-white"></i>
               </a>
             </li>
           </ul>
         </div>
+      </div>
+      <div style="width: 2rem;height: 2rem; background-color: rgba(255, 255, 255, 0.2); color: white;border-radius: 50%;position: absolute; margin-top: 85vh;text-align: center;line-height: 2rem;">
+        <i class="fas fa-angle-down"></i>
       </div>
     </div>
   </div>
   <!-- End Banner Image-->
 
   <!-- Start About Me Area -->
-  <div style="background-color: #1e1e1e;padding-bottom: 3rem;padding-top: 3rem;">
+  <div style="background-color: #121212;padding-bottom: 3rem;padding-top: 3rem;">
   <div class="container">
     <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
     <div class="row">
@@ -140,7 +144,7 @@
   <!-- End About Me Area -->
 
   <!-- Start Experience and Skills Area -->
-  <div style="background-color: #252525;padding-bottom: 3rem;padding-top: 3rem;">
+  <div style="padding-bottom: 3rem;padding-top: 3rem;">
   <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
@@ -234,7 +238,7 @@
   <!-- Start Footer Area -->
   <footer>
     <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
-    <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: red">Let's talk</span></h2>
+    <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
     <div class="modal fade" id="contactModal" tabindex="-1" role="">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
