--- a/index.html
+++ b/index.html
@@ -1,150 +1,300 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rupdeep Saha | Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Rupdeep Saha | Portfolio</title>
 
+  <!-- Google Fonts -->
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
+  <!-- Font Awesome icons -->
+  <link rel="stylesheet" href="./css/font-awesome.min.css" />
 
-	<!-- Font Awesome icons -->
-	<link rel="stylesheet" href="./css/font-awesome.min.css">
+  <!-- Material Kit CSS -->
+  <link href="./css/material-kit.min.css" rel="stylesheet" />
 
-	<!-- My own stylesheet -->
-	<link rel="stylesheet" href="./css/style.css">
-
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+  <!-- My own stylesheet -->
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
+
 <body>
-	<!-- Background for banner and navbar -->
-	<div class="bg-img">
-		<!-- ===== Start Header Area ===== -->
-		<header class="header-area">
-			<div class="main-menu">
-				<!-- === Bootstrap Navbar === -->
-				<nav class="navbar navbar-expand-lg navbar-light">
-					<a class="navbar-brand" href="#">Rupdeep Saha</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon">
-							<i class="fas fa-bars" onclick="togglerFunction()" style="color: rgba(255, 255, 255, 0.8) ; font-size: 27px;"></i>
-						</span>
-						
-					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-					  <div class="mr-auto"></div>
-					  <ul class="navbar-nav">
-						<li class="nav-item active">
-						    <a class="nav-link" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Services</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Blog</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Projects</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Contact</a>
-						</li>
-					  </ul>
-					</div>
-				  </nav>
-			</div>
-		</header>
-		<!-- ===== End Header Area ===== -->
+  <!-- Start Banner Image -->
+  <!-- https://colorhunt.co/palette/62193 -->
+  <!-- 1e1e1e section1
+   252525 section2
+  222831 footer and nav-->
+  <!-- #03DAC6 #121212 #333 -->
+  <div class="bg-color-1">
+    <!-- Start Header -->
+    <header>
+      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40" style="background-color: #333!important">
+        <div class="container">
+          <div class="navbar-translate">
+            <a class="navbar-brand" href="#">Rupdeep Saha</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Resume</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- End Header -->
+    <!-- Start Banner -->
+    <div class="site-main">
+      <div class="author">
+        <div class="author-img"></div>
+        <h2 class="name">Rupdeep Saha</h2>
+        <h5 class="type-effect">I'm <span id="typed"></span></h5>
+        <div class="social-icons">
+          <ul>
+            <li class="list">
+              <a href="mailto:rupdeep654@gmail.com" target="_blank">
+                <i class="fa fa-envelope icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://twitter.com/therupdeep" target="_blank">
+                <i class="fab fa-twitter icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://github.com/therupdeep" target="_blank">
+                <i class="fab fa-github icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <i class="fab fa-medium icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <i class="fab fa-facebook icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <i class="fab fa-linkedin icon-white"></i>
+              </a>
+            </li>
+            <li class="list">
+              <a href="https://medium.com/@kitze" target="_blank">
+                <i class="fab fa-telegram icon-white"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div style="width: 2rem;height: 2rem; background-color: rgba(255, 255, 255, 0.2); color: white;border-radius: 50%;position: absolute; margin-top: 85vh;text-align: center;line-height: 2rem;">
+        <i class="fas fa-angle-down"></i>
+      </div>
+    </div>
+  </div>
+  <!-- End Banner Image-->
 
-		<!-- ===== Start Main Area ===== -->
-		<div class="site-main">
-			<!-- ===== Start Banner Area ===== -->
-			<div class="author">
-				<div class="author-img"></div>
-				<h1 class="name-effect">Rupdeep Saha</h1>
-				<h5 class="type-effect">I'm <span id="typed"></span></h5>
-				<div class="social-icons">
-					<ul>
-						<li class="list">
-							<a href="mailto:rupdeep654@gmail.com" target="_blank">
-								<div class="fa fa-envelope icon-white"></div>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://twitter.com/therupdeep" target="_blank">
-								<i class="fab fa-twitter icon-white"></i>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://github.com/therupdeep" target="_blank">
-								<div class="fab fa-github icon-white"></div>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://medium.com/@kitze" target="_blank">
-								<div class="fab fa-medium icon-white"></div>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://medium.com/@kitze" target="_blank">
-								<div class="fab fa-facebook icon-white"></div>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://medium.com/@kitze" target="_blank">
-								<div class="fab fa-linkedin icon-white"></div>
-							</a>
-						</li>
-						<li class="list">
-							<a href="https://medium.com/@kitze" target="_blank">
-								<div class="fab fa-telegram icon-white"></div>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- ===== End Banner Area ===== -->
-		</div>
-		<!-- ===== End Main Area ===== -->
-	</div>
-	<!-- Start About Me Area -->
-	<section class="about">
-		<div class="container">
-		<h1 class="text-uppercase about-me-text">About Me</h3>
-		<div class="row">
-			<div class="col-md-5 col-sm-10">
-				<div>
-					<img src="./assets/images/banner/about.jpg" alt="profile-image" class="profile-image">
-				</div>
-			</div>
-			<div class="col-md-7 col-sm-10">
-				<div>
-					<h2>I am Rupdeep Saha</h2>
-					<span> Developer | Web · iOS · Android</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	</section>
-	<!-- End About Me Area -->
-	
+  <!-- Start About Me Area -->
+  <div style="background-color: #121212;padding-bottom: 3rem;padding-top: 3rem;">
+  <div class="container">
+    <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
+    <div class="row">
+      <div class="col-lg-5 col-md-5 col-sm-10">
+        <lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
+      </div>
+      <div class="col-lg-7 col-md-7 col-sm-10">
+        <h2>I am Rupdeep Saha</h2>
+        <span> Developer | Web · iOS · Android</span>
+        <p style="margin-top: 2rem;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos minima, iste
+          eaque veritatis doloribus neque inventore ut numquam molestiae nesciunt qui deleniti aperiam eveniet minus
+          exercitationem, eligendi sapiente natus assumenda?</p>
+      </div>
+    </div>
+  </div>
+</div>
+  <!-- End About Me Area -->
 
-	<!-- JQuery JS -->
-	<script src="./js/jquery-3.5.1.min.js"></script>
+  <!-- Start Experience and Skills Area -->
+  <div style="padding-bottom: 3rem;padding-top: 3rem;">
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
+        <h2 class="text-uppercase">Skills</h2>
+        <ul class="skill-list">
+          <li class="skill-list-item">
+            <span>React &nbsp;<img src="./assets/icons/react.svg" alt="React" width="25px" height="25px"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+                <span></span>
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>HTML5 &nbsp;<img src="./assets/icons/html5.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>CSS3 &nbsp;<img src="./assets/icons/css3.svg" alt="React" width="25px" height="25px" style="margin-bottom: 4px;"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>JavaScript &nbsp;<img src="./assets/icons/javascript.svg" alt="React" width="25px" height="25px"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+          <li class="skill-list-item">
+            <span>Python &nbsp;<img src="./assets/icons/python.svg" alt="React" width="25px" height="25px"></span>
+            <span style="float: right;">25%</span>
+            <div class="progress" style="margin-top: 1rem;">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                aria-valuemax="100">
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <h2 class="text-uppercase">Experience</h2>
+        <ul class="experience-list">
+          <li class="experience-list-item">
+            <span>Front End Web Developer</span>
+            <span style="float: right;">2018-2019</span>
+            <p>jddddddddddddddddddddddddddddddd</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
-	<!-- Bootstrap JS -->
-	<script src="./js/bootstrap.min.js"></script>
+  <!-- End Experience and Skills Area -->
 
-	<!-- Typed JS -->
-	<script src="./js/typed.min.js"></script>
+  <!-- Start Projects Area -->
+  <!-- If we want a carousel we can do it with https://frontendscript.com/responsive-css-only-carousel-slider/ -->
 
-	<!-- Main JS -->
-	<script src="./js/main.js"></script>
+  <div class="container" style="margin-top: 3rem;margin-bottom: 3rem;">
+    <h1 class="about-me-text">Projects</h1>
+    <div class="card-container">
+      <div class="card" style="width: 20rem;height: 20rem;">
+        <img class="img-fluid" src="./assets/images/banner/about.jpg" style="width: 100%; height: 45%;">
+        <div class="card-content" style="width: 100%; height: 55%;padding: 2rem;">
+          <span><b>Artemis</b></span>
+          <p style="margin-bottom: 1.5rem;">hdhhdhdhhdkdkdkdkdkdkdkdkdkdkdddddddddddddddd</p>
+          <a href="">Open&nbsp;&nbsp;<span><i class="fas fa-external-link-alt"></i></span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <h5><a href="">...view all projects</a></h5>
+  </div>
+  </div>
+  <!-- End Projects Area -->
+
+  <!-- Start Footer Area -->
+  <footer>
+    <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
+    <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
+    <div class="modal fade" id="contactModal" tabindex="-1" role="">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+          <div class="modal-header">
+            <span><h3 style="margin-top: 0;">Contact Me</h3></span>
+            <span>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </span>
+          </div>
+          <div class="modal-body">
+            <form action="action_page.php">
+              <div class="form-group">
+              <label for="fullname">Name</label>
+              <input type="text" class="form-control" id="fullname" name="fullname" placeholder="John Doe" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="abc@xyz.com" required>
+            </div>
+            <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="subject" class="form-control" id="subject" name="subject" placeholder="Enter Subject" required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" class="form-control" name="message" placeholder="Leave a message for me, I will get back to you at the earliest!" rows="5" required></textarea>
+            </div>
+              <input type="submit" value="Send" class="btn btn-primary btn-round">
+          
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </footer>
+  <!-- End Footer Area -->
+  <!--   Core JS Files   -->
+  <script src="./js/jquery.min.js" type="text/javascript"></script>
+  <script src="./js/popper.min.js" type="text/javascript"></script>
+  <script src="./js/bootstrap-material-design.min.js" type="text/javascript"></script>
+  <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="./js/material-kit.min.js" type="text/javascript"></script>
+
+  <!-- Typed JS -->
+  <script src="./js/typed.min.js"></script>
+
+  <!-- Lottiefiles Script -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+  <!-- Main JS -->
+  <script src="./js/main.js"></script>
+  
 </body>
+
 </html>
