--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <title>Rupdeep Saha | Portfolio</title>
 
   <!-- Google Fonts -->
-  <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   <!-- Font Awesome icons -->
   <link rel="stylesheet" href="./css/font-awesome.min.css" />
@@ -35,7 +33,7 @@
   <div class="bg-color-1">
     <!-- Start Header -->
     <header>
-      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40" style="background-color: #333!important">
+      <nav class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg" color-on-scroll="40">
         <div class="container">
           <div class="navbar-translate">
             <a class="navbar-brand" href="#">Rupdeep Saha</a>
@@ -239,7 +237,7 @@
   <!-- End Projects Area -->
 
   <!-- Start Footer Area -->
-  <footer>
+  <footer style="background-color: rgba(51, 51, 51, 0.4);">
     <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
     <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
     <div class="modal fade" id="contactModal" tabindex="-1" role="">
