--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
    252525 section2
   222831 footer and nav-->
   <!-- #03DAC6 #121212 #333 -->
+  <!-- #1b262c #222831-->
   <div class="bg-color-1">
     <!-- Start Header -->
     <header>
@@ -125,7 +126,7 @@
   <!-- End Banner Image-->
 
   <!-- Start About Me Area -->
-  <div style="background-color: #121212;padding-bottom: 3rem;padding-top: 3rem;">
+  <div style="background-color: #252525;padding-bottom: 3rem;padding-top: 3rem;">
   <div class="container">
     <h1 class="about-me-text" style="margin-top: 0;">About Me</h1>
     <div class="row">
@@ -145,7 +146,7 @@
   <!-- End About Me Area -->
 
   <!-- Start Experience and Skills Area -->
-  <div style="padding-bottom: 3rem;padding-top: 3rem;">
+  <div style="padding-bottom: 3rem;padding-top: 3rem;background-color: #121212;">
   <div class="container" style="margin-top: 3rem;margin-bottom: 3rem">
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12" style="padding-right: 30px;">
@@ -237,7 +238,7 @@
   <!-- End Projects Area -->
 
   <!-- Start Footer Area -->
-  <footer style="background-color: rgba(51, 51, 51, 0.4);">
+  <footer style="background-color: #1b262c;">
     <div class="container" style="margin-top: 3rem;margin-bottom: 3rem; text-align: left;">
     <h2>Want to get in touch? <span data-toggle="modal" data-target="#contactModal" style="cursor: pointer;color: #03DAC6">Let's talk</span></h2>
     <div class="modal fade" id="contactModal" tabindex="-1" role="">
